# mediaschema

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: codegen.yml  feature-matrix.yml
docs/superpowers/plans/: 2026-05-17-mediaschema-buffa-sp0-foundation.md  2026-05-17-mediaschema-sp1-common.md  2026-05-18-mediaschema-mono-consolidation.md  2026-05-18-mediaschema-sp2-database.md  2026-05-18-mediaschema-sp3-network.md
docs/superpowers/specs/: 2026-05-17-mediaschema-buffa-sp0-foundation-design.md  2026-05-17-mediaschema-full-migration-design.md
examples/: end_to_end_mongodb.rs
mediaschema-derive/: Cargo.toml
mediaschema-derive/src/: lib.rs
mediaschema-derive/tests/: derive.rs
proto/media/v1/: types.proto
proto/media/v2/: graph.proto
proto/mediaframe/v1/: mediaframe.proto
proto/mediatime/v1/: mediatime.proto
schema/: README.md  audio.md  audio_file_record.md  audio_segments.md  audio_track.md  bitflags.md  chapter.md  enums.md  graph.md  keyframe.md  media.md  media_file.md  mediaframe-candidates.md  person.md  primitives.md  scene.md  smart_folder.md  sound_events.md  speaker.md  subtitle.md  subtitle_cue_ass.md  subtitle_cue_cea_608.md  subtitle_cue_ebu_stl.md  subtitle_cue_lrc.md  subtitle_cue_micro_dvd.md  subtitle_cue_pgs.md  subtitle_cue_sami.md  subtitle_cue_sbv.md  subtitle_cue_sub_viewer.md  subtitle_cue_ttml.md  subtitle_cue_vob_sub.md  subtitle_cue_vtt.md  subtitle_cues.md  subtitle_track.md  subtitle_track_ass_style.md  subtitle_track_lrc_metadata.md  subtitle_track_sami_style.md  subtitle_track_ttml_region.md  subtitle_track_ttml_style.md  subtitle_track_vob_sub_palette.md  (+7 more)
src/: lib.rs
src/buffa/: audio_segment.rs  chapter.rs  enums.rs  error.rs  location.rs  media.rs  media_file.rs  mod.rs  person.rs  primitives.rs  sound_event.rs  speaker.rs  subtitle.rs  vo.rs  voice_fingerprint.rs  watched_location.rs
src/buffa/graph/: attachment.rs  audio.rs  data.rs  media.rs  mod.rs  subtitle.rs  video.rs
src/domain/: bitflags.rs  enums.rs  identified.rs  mod.rs  primitives.rs  vo.rs
src/domain/aggregates/: chapter.rs  curation.rs  media.rs  media_file.rs  mod.rs  person.rs  speaker.rs  watched_location.rs
src/domain/aggregates/attachment/: blob.rs  facet.rs  mod.rs  track.rs
src/domain/aggregates/audio/: facet.rs  mod.rs  segment.rs  sound_event.rs  track.rs
src/domain/aggregates/audio/speech_segment/: mod.rs  tests.rs
src/domain/aggregates/data/: facet.rs  mod.rs  track.rs
src/domain/aggregates/subtitle/: cue.rs  facet.rs  mod.rs  track.rs
src/domain/aggregates/video/: detections.rs  facet.rs  keyframe.rs  mod.rs  scene.rs  thumbnail.rs  track.rs
src/graph/: attachment.rs  audio.rs  data.rs  mod.rs  subtitle.rs  video.rs
src/graphql/: audio.rs  bitflags.rs  enums.rs  error.rs  leaves.rs  media.rs  mod.rs  query.rs  scalars.rs  schema.graphql  subtitle.rs  video.rs
src/mongodb/: audio.rs  chapter.rs  error.rs  indexes.rs  leaves.rs  media.rs  media_file.rs  mod.rs  person.rs  schema.md  subtitle.rs  util.rs  video.rs
src/sqlx/: dto.rs  error.rs  mod.rs
src/sqlx/mysql/: attachment.rs  audio.rs  chapter.rs  data.rs  leaves.rs  media.rs  media_file.rs  mod.rs  person.rs  schema.sql  subtitle.rs  video.rs
src/sqlx/mysql/migrations/: 0001_init.sql
src/sqlx/postgres/: attachment.rs  audio.rs  chapter.rs  data.rs  leaves.rs  media.rs  media_file.rs  mod.rs  person.rs  schema.sql  subtitle.rs  video.rs
src/sqlx/postgres/migrations/: 0001_init.sql
src/sqlx/sqlite/: attachment.rs  audio.rs  chapter.rs  data.rs  leaves.rs  media.rs  media_file.rs  mod.rs  person.rs  schema.sql  subtitle.rs  thumbnail.rs  video.rs
src/sqlx/sqlite/migrations/: 0001_init.sql  0002_provenance_backend_platform.sql
tests/: graphql_sdl.rs  roundtrip.rs  subtitle_completion.rs
xtask/: Cargo.toml
xtask/src/: main.rs
