[workspace]
resolver = "2"
members = ["mediaschema-derive", "xtask"]

[package]
name = "mediaschema"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Product-agnostic media-primitive schema (buffa-generated)"
publish = false
rust-version = "1.85"

[features]
default = ["std"]
# Three-tier feature surface, matching `mediaframe`:
#
# - `--no-default-features` ⇒ pure **no-std + no-alloc**. Only types
#   whose entire transitive surface is stack-only (`Uuid7`, `Uuid7Error`,
#   `FileChecksum`, `Rgba`, `ErrorCode`, `UnknownErrorCode`,
#   `LocationError`, the enum + bitflags surface in PR #10).
# - `--no-default-features --features alloc` ⇒ **no-std + alloc**. Adds
#   heap-using domain types (`Location` / `LocalLocation`, `ErrorInfo`,
#   `Provenance`, `LocalizedText`) — anything reaching `Vec` / `SmolStr`.
# - `--features std` (default) ⇒ **std**, implies `alloc`. Adds the
#   generated wire layer (`buffa-types` codegen pulls in `Vec`/`String`/…
#   that need an allocator AND wire-codec utilities that need std), plus
#   aggregates that use `jiff::Timestamp` (Speaker, WatchedLocation,
#   UserTag, SceneAnnotation in PR #11).
alloc = []
std = ["alloc", "smol_str/std", "buffa/std", "buffa-types/std", "uuid/std", "uuid/v7"]
json = ["std", "dep:serde", "dep:serde_json", "buffa/json", "buffa-types/json", "mediatime/serde"]
# `arbitrary` / `quickcheck` imply `std`. Upstream `buffa-types 0.6.0`'s
# `arbitrary` codegen references `std::RECURSIVE_COUNT_*` symbols
# emitted by the `arbitrary` derive macro and won't compile without
# `std` — `cargo hack test --each-feature` enabling `arbitrary` alone
# would fail at the buffa-types layer. Property-based tests are also
# inherently std-bound (`Unstructured`/`Gen` allocate, `Vec`/`String`
# everywhere), so pinning the dependency just reflects reality.
arbitrary = ["std", "dep:arbitrary", "buffa/arbitrary", "buffa-types/arbitrary", "mediatime/arbitrary"]
quickcheck = ["arbitrary", "dep:quickcheck", "dep:mediaschema-derive"]

[dependencies]
buffa = { version = "0.6", default-features = false }
buffa-types = { version = "0.6", default-features = false }
mediatime = { version = "0.1.6", default-features = false, features = ["buffa"] }
# Domain layer (`src/domain/`): hand-written types programmed against by
# downstream code. The buffa-generated wire layer is the serialization edge.
smol_str = { version = "0.3", default-features = false }
# `uuid` features are gated on mediaschema's `std` (see `[features]` above)
# — `v7` provides `Uuid::now_v7()` which requires `SystemTime` (std). Under
# `--no-default-features` the bare `Uuid` type stays available for parse /
# from_bytes / version inspection, which is all the `Uuid7` validating
# ctors need.
uuid = { version = "1", default-features = false }
# Derives used across the domain layer: `IsVariant` (unit/newtype),
# `Unwrap` / `TryUnwrap` (newtype) with `#[unwrap(ref, ref_mut)]
# #[try_unwrap(ref, ref_mut)]` for shared-ref + mut-ref accessor flavours.
derive_more = { version = "2", default-features = false, features = ["is_variant", "unwrap", "try_unwrap"] }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
quickcheck = { version = "1", optional = true }
mediaschema-derive = { path = "mediaschema-derive", optional = true }

[dev-dependencies]
quickcheck = "1"
serde_json = "1"
buffa = { version = "0.6", default-features = false, features = ["std"] }
mediatime = { version = "0.1.6", default-features = false, features = ["buffa"] }

[lints.rust]
rust_2018_idioms = "warn"
