[package]
name = "mediaschema-derive"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive"] }
quote = "1"

[dev-dependencies]
quickcheck = "1"
arbitrary = { version = "1", features = ["derive"] }
